<!--
    Copyright 2015 Park Si Hyeon

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="app_name">HeyWiFi Beta</string>
    <string name="app_id">520489361431534</string>
    <string name="ad_unit_id">ca-app-pub-2855465464343651/9242284922</string>

    <string name="action_close">닫기</string>
    <string name="action_save">저장</string>
    <string name="action_delete">삭제</string>

    <!-- MainActivity -->
    <string name="action_notlogined">로그인</string>
    <string name="action_greet1">반갑습니다,&#160;</string>
    <string name="action_greet2">님</string>
    <string name="action_settings">설정</string>
    <string name="action_feedback">피드백</string>

    <!-- Tab1Activity -->
    <string name="tab1_title">휴대폰 찾기</string>
    <string name="change_info_btn">나의 휴대폰 관리하기</string>
    <string name="find_others_device_btn">다른 사람의 휴대폰 찾아주기</string>
    <string name="find_my_device_btn">나의 잃어버린 휴대폰 찾기</string>
    <string name="namebelow_registered">등록되었습니다.</string>
    <string name="namebelow_failed">확인할 수 없습니다.</string>
    <string name="my_name_guide01">이 휴대폰을 찾으시려면,</string>
    <string name="my_name_guide02">1. 다른 휴대폰에 이 앱을 설치하고 찾거나,</string>
    <string name="my_name_guide03">2. heywifi.net에서 휴대폰을 찾아주세요.</string>
    <string name="n_ripple_tv01">휴대폰을 등록하세요.</string>
    <string name="n_ripple_tv02">나중에 이 휴대폰을 찾을 수 있습니다.</string>
    <string name="register_internet">인터넷에 연결되어 있어야 합니다.</string>
    <string name="fivedevices_dialog_title">죄송합니다</string>
    <string name="fivedevices_dialog_text">한 계정당 휴대폰은 5개까지 등록할 수 있습니다. 안쓰는 휴대폰을 삭제하신 후 다시 시도해보세요.</string>
    <string name="congratulation_dialog_title">축하합니다</string>
    <string name="congratulation_dialog_text">도움이 되었다니 정말 기쁘네요. 앞으로도 잘 부탁드립니다.</string>

    <!-- RegisterPhoneActivity -->
    <string name="registerphone_label">휴대폰 등록하기</string>
    <string name="register_guide">이름만 정해주시면 됩니다.</string>
    <string name="register_name">휴대폰 이름</string>
    <string name="register_err_empty">이름을 정해주세요.</string>
    <string name="register_err_toolong">이름이 너무 깁니다.</string>
    <string name="register_err_already">이미 등록된 이름입니다.</string>
    <string name="register_err_byother">다른 계정에서 등록된 휴대폰입니다.</string>
    <string name="register_phone_ex">예) 갤럭시 S6</string>
    <string name="register_collecting">HeyWiFi에서 수집하는 항목\n(휴대폰을 찾을 때만 사용됩니다)</string>
    <string name="register_mac">기기의 MAC 주소</string>
    <string name="register_btn">등록하기</string>
    <string name="register_dialog_title">죄송합니다</string>
    <string name="register_dialog_text">구글 플레이 스토어가 설치되어 있지 않은 휴대폰은 등록이 불가능합니다. 불편을 드려 죄송합니다.</string>

    <!-- Tab2Activity -->
    <string name="tab2_title">공공장소 에티켓</string>

    <!-- LoginActivity -->
    <string name="login_label">로그인</string>
    <string name="naveroauth_label">네이버 아이디로 로그인</string>

    <!-- LoadingDialog -->
    <string name="wait">잠시만 기다려주세요</string>

    <!-- FindPhoneActivity -->
    <string name="findphone_label">휴대폰 찾기</string>
    <string name="findphone_guide">찾을 휴대폰을 선택하세요.</string>
    <string name="findphone_guide_nointernet">인터넷 연결을 확인해주세요.</string>
    <string name="findphone_guide_nophone">등록된 휴대폰이 없습니다.</string>
    <string name="findphone_guide_getting">목록을 가져오는 중입니다...</string>
    <string name="do_ringing">벨소리 울리기</string>
    <string name="do_vibrating">진동 시키기</string>
    <string name="find">찾기</string>
    <string name="findphone_dialog_title">휴대폰 찾기 기능의 한계</string>
    <string name="findphone_dialog_text">비행기 모드이거나 전원이 꺼져있는 휴대폰은 찾을 수 없으며, 그러한 경우가 아니더라도 찾아내지 못할 수도 있습니다.\n\n하지만 찾아내지 못하는 경우는 드물며, 이 앱이 찾아내지 못한다 하더라도 마음을 가다듬고 기억을 되돌려가며 찾으면 찾으실 수 있을겁니다.</string>

    <!-- FindingPhoneActivityS01 -->
    <string name="finding01_label">휴대폰 찾기 (1/2)</string>
    <string name="finding01_found_btn">찾았습니다</string>
    <string name="finding01_giveup_btn">포기하기</string>
    <string name="finding01_nextstep_btn">다음 단계로</string>
    <string name="finding01_requesting">신호를 보내는 중입니다...</string>
    <string name="finding01_failed">신호를 보내지 못했습니다.</string>
    <string name="finding01_failed_guide">다음 단계로 넘어가주세요.</string>
    <string name="finding01_sent">신호를 보냈습니다.</string>
    <string name="finding01_guide">위의 원이 가득찰 때까지 기다려보세요.</string>
    <string name="finding01_found_ask">찾았나요?</string>

    <!-- FindingPhoneActivityS02 -->
    <string name="finding02_label">휴대폰 찾기 (2/2)</string>
    <string name="finding02_closebtn">방법대로 했으며, 이 창을 닫겠습니다</string>
    <string name="finding02_text01">이번 단계는 여러분의 도움이 필요합니다.</string>
    <string name="finding02_text02">핫스팟을 이용해 잃어버린 휴대폰을 찾는 방법입니다. 이 휴대폰으로 핫스팟을 만들고 이를 잃어버린 휴대폰이 찾아내는 방식입니다.</string>
    <string name="finding02_guide">그대로 따라해주세요:</string>
    <string name="finding02_guide01">1. 아래의 문자를 복사해주세요.</string>
    <string name="finding02_guide01err">오류가 발생했습니다.</string>
    <string name="finding02_guide02">2. 핫스팟 이름으로 복사한 문자를 붙여넣고 핫스팟을 시작하세요.</string>
    <string name="finding02_guide02help">(핫스팟 이름 외에 암호 등은 설정하지 않으셔도 됩니다)</string>
    <string name="finding02_guide03">3. 핫스팟을 실행시킨 상태로 휴대폰을 찾아보세요.</string>
    <string name="finding02_guideend1">잃어버린 휴대폰에서 이 앱이 약 5분 간격으로 주변 와이파이를 검색합니다. 이 앱이 위의 핫스팟 이름을 감지하면 전 단계에서 설정한대로 벨소리나 진동이 울립니다.</string>
    <string name="finding02_guideend2">생각외로 시간이 꽤 깁니다. 하지만 꼭 찾아낼 수 있으니 와이파이 검색 대기 시간동안 같이 찾아주세요.</string>

    <!-- FindOthersActivity -->
    <string name="findothers_label">다른 계정으로 로그인</string>

    <!-- ManagePhoneActivity -->
    <string name="managephone_label">휴대폰 관리</string>
    <string name="dialog_deletetitle">휴대폰 삭제</string>
    <string name="dialog_deletetext">(을)를 삭제합니다. 다시 등록하기 전까지는 이 휴대폰을 찾을 수 없게 됩니다.</string>
    <string name="manage_guide">관리할 휴대폰을 선택하세요.</string>
    <string name="dialog_renametitle">휴대폰 이름 수정</string>
    <string name="dialog_renametext">의 이름을 수정합니다.</string>

</resources>
