<!--
    Copyright 2015 Park Si Hyeon

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding" >

    <Button
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finding02_closebtn"
        android:theme="@style/ButtonColorNormal"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/close_btn" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp" >

                <ImageView
                    android:id="@+id/search_byself_iv"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_person_black_48dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finding02_text01"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/search_byself_iv"
                    android:layout_marginLeft="12dp"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_text02"
                android:textSize="16sp"
                android:layout_marginBottom="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide01"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/finding_ssid_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide01err"
                android:textSize="18sp"
                android:editable="false"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide02"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide02help"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guide03"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding02_guideend" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>