<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="32dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_guide"
            android:textSize="20sp"
            android:layout_marginBottom="32dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/phone_name_err_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:layout_alignParentRight="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <EditText
            android:id="@+id/phone_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_ex"
            android:textSize="18sp"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="45"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_collecting"
            android:textSize="16sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_mac"
            android:textSize="14sp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/phone_mac_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="4dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:layout_alignParentBottom="true"
        android:theme="@style/ButtonColorTeal" />

</RelativeLayout>