<!--
    Copyright 2015 Park Si Hyeon

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding" >

    <LinearLayout
        android:id="@+id/button_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/found_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finding01_found_btn"
            android:theme="@style/ButtonColorCyan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/giveup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finding01_giveup_btn"
                    android:theme="@style/ButtonColorNormal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/nextstep_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finding01_nextstep_btn"
                    android:theme="@style/ButtonColorTeal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_ly" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <com.github.lzyzsd.circleprogress.CircleProgress
                android:id="@+id/circle_progress"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                app:circle_finished_color="@color/colorPrimary"
                app:circle_progress="0"
                app:circle_max="100" />

            <TextView
                android:id="@+id/finding_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding01_requesting"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/circle_progress"
                android:layout_marginTop="24dp" />

            <TextView
                android:id="@+id/finding_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finding01_guide"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/finding_text01"
                android:visibility="invisible"
                android:layout_marginTop="8dp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>