<!--
    Copyright 2015 Park Si Hyeon

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/main_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_deletetitle"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp" >

            <Button
                android:id="@+id/dialog_deletebtn"
                android:layout_width="@dimen/padding_delete"
                android:layout_height="wrap_content"
                android:text="@string/action_delete"
                android:textColor="@color/colorPrimary"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignParentRight="true" />

            <Button
                android:id="@+id/dialog_closebtn"
                android:layout_width="@dimen/padding_close"
                android:layout_height="wrap_content"
                android:text="@string/action_close"
                android:textColor="@color/gray"
                style="?android:attr/borderlessButtonStyle"
                android:layout_toLeftOf="@id/dialog_deletebtn"
                android:layout_marginLeft="2dp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="24dp"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/progressbar"
            android:layout_marginLeft="24dp"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</RelativeLayout>