<!--
    Copyright 2015 Park Si Hyeon

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/findphone_guide_rl"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="28dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findphone_guide"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/findphone_find_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="28dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/findphone_ring_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_ringing"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true" />

                <CheckBox
                    android:id="@+id/findphone_ring_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/findphone_vibrate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_vibrating"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true" />

                <CheckBox
                    android:id="@+id/findphone_vibrate_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/findphone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:theme="@style/ButtonColorTeal" />

    </LinearLayout>

    <ListView
        android:id="@+id/findphone_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/findphone_find_ly"
        android:layout_below="@id/findphone_guide_rl" />

</RelativeLayout>